<resources>
    <string name="app_name">MovieCatalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tv">TV Show</string>
    <string name="title">Judul</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="synopsis_text">Synopsis</string>
    <string name="favorite">Favorite</string>
    <string name="synopsis">Lorem ipsum dolor sit amet  Proin id mauris arcu. Nulla tempus arcu augue, congue cursus metus sollicitudin sit amet. Fusce ligula nisi, ullamcorper non aliquet at, blandit non eros. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer risus est, dignissim ut elementum quis, sodales eu mi. </string>
</resources>